<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherForecast">

    <ImageView
        android:contentDescription="weatherPic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/weathericon"
        />

    <TextView
        android:id="@+id/currTemp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@android:dimen/app_icon_size"
        android:layout_below="@+id/weathericon"
        android:layout_weight="1"
        android:textSize="20sp"
        android:text="@string/currTemp" />

    <TextView
        android:id="@+id/minTemp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="@android:dimen/app_icon_size"
        android:layout_below="@+id/currTemp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:text="@string/minTemp" />

    <TextView
        android:id="@+id/maxTemp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="@android:dimen/app_icon_size"
        android:layout_below="@+id/minTemp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:text="@string/maxTemp" />

    <TextView
        android:id="@+id/uv"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="@android:dimen/app_icon_size"
        android:layout_below="@+id/maxTemp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:text="@string/uvRating" />

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uv"
        android:layout_marginHorizontal="@android:dimen/app_icon_size"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:visibility="invisible"
        android:layout_weight="5" />

</RelativeLayout>